add UI for feeding. Currently not functional

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,3 +10,7 @@
   <br>
   <button type="submit" class="btn btn-success">Create!</button>
 </form>
+<br>
+<form action="clear">
+  <button name="clear" class="btn btn-primary">Clear Database</button>
+</form>
